<resources>
    <string name="app_name">TimeMaster</string>
    <string name="login">Login</string>
    <string name="password">PASSWORD</string>
    <string name="hash">******</string>
    <string name="sign_up">Sign Up</string>
    <string name="hello_reallygreatsite_com">hello@reallygreatsite.com</string>
    <string name="email">EMAIL</string>
    <string name="name">John Doe</string>
    <string name="nameText">NAME</string>
    <string name="login_in_here">Login in here</string>
    <string name="already_registered">Already Registered?</string>
    <string name="sign_in_to_continue">Sign in to Continue</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="permission_location">ALLOW LOCATION SERVICE TO FIND NEARER PLACES AROUND YOU</string>
</resources>